# mongodb-base-service

./: Cargo.toml  README.md
src/: base.rs  error.rs  id.rs  lib.rs  mock.rs  model.rs  mongo.rs  node.rs
