[package]
name = "mongodb-base-service"
version = "0.3.0"
authors = ["bdbmammoth <bdeboer@noreply.com>"]
edition = "2018"
license = "MIT"
keywords = ["mongodb", "service", "starter"]
readme = "README.md"
description = """
A simple Rust service wrapper to simplify finds, updates, deletes
"""
repository = "https://github.com/briandeboer/mongodb-base-service"


[features]
default = []
graphql = ["juniper"]

[dependencies]
base64 = "0.12.0"
bson = "0.14.1"
chrono = { version = "0.4.11", features = ["serde"] }
data-encoding = "2.2.0"
log = "0.4.8"
jsonwebtoken = "7.1.0"
mongodb-cursor-pagination = { version = "0.2.6", features = ["graphql"] }
mongodb = "0.9.2"
ring = "0.16.13"
rust-argon2 = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
voca_rs = "1.10.0"
# optional
juniper = { version = "0.14.2", optional = true }